# topocore

./: .gitignore  .pre-commit-config.yaml  PROMPT_MASTER.md  README.md  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
docs/: index.md
src/topocore/: exceptions.py
src/topocore/core/: __init__.py  constants.py  exceptions.py  protocols.py  types.py  version.py
src/topocore/features/: __init__.py  feature_builder.py  feature_codes.py  feature_codes2.py
src/topocore/features/catalogs/: __init__.py  cadastre.py  control.py  default.py  drainage.py  structures.py  terrain.py  transportation.py  utilities.py  vegetation.py
src/topocore/geodesy/: __init__.py  _cache.py  crs.py  datum.py  distance.py  ellipsoid.py  exceptions.py  geodesic.py  projection.py  transformer.py  utm.py  validation.py
src/topocore/geometry/: __init__.py  base.py  bbox2d.py  bbox3d.py  enums.py  point2d.py  point3d.py  protocols.py
src/topocore/io/: __init__.py  base.py  constants.py  exceptions.py
src/topocore/io/ascii/: __init__.py  base_reader.py  base_writer.py  converter.py  exceptions.py  format.py  header.py  mapper.py  parser.py  records.py  (+2 more)
src/topocore/linalg/: vector2d.py  vector3d.py
src/topocore/math/: __init__.py  config.py  constants.py  numeric.py  tolerance.py  validation.py
src/topocore/pointcloud/: attributes.py  chunk.py  classification.py  numpy_memory.py  pointcloud.py  statistics.py
src/topocore/survey/: __init__.py  exceptions.py  formats.py  models.py  reader.py
src/topocore/terrain/: __init__.py  _geometry.py  aspect.py  barycentric.py  base.py  breaklines.py  cell.py  constants.py  contours.py  dtm.py  enums.py  exceptions.py  filters.py  grid.py  hillshade.py  idw.py  interpolation.py  linear.py  models.py  nearest.py  nodata.py  raster.py  sampling.py  slope.py  tin.py  types.py  validation.py  weights.py
tests/core/: test_constants.py  test_version.py
tests/geodesy/: test_geodesy.py
tests/geometry/: test_base.py  test_bbox2d.py  test_bbox3d.py  test_point2d.py  test_point3d.py
tests/io/ply/: conftest.py  helpers.py  test_converter.py  test_enums.py  test_exceptions.py  test_header.py  test_header_parser.py  test_models.py  test_ply_module.py  test_reader.py  test_reader_ascii.py  test_reader_binary_be.py  test_reader_binary_le.py
tests/linalg/: test_vector2d.py  test_vector3d.py
tests/math/: test_config.py  test_constants.py  test_math_constants.py  test_math_validation.py  test_numeric.py  test_tolerance.py  test_validation.py
tests/pointcloud/: test_chunk.py  test_numpy_memory.py  test_pointcloud.py  test_statistics.py
tests/terrain/: test_model.py  test_public_api.py  test_tin.py  test_validation.py
topocore.txt/: repo-to-text_2026-07-11-19-36-02-UTC.txt  repo-to-text_2026-07-11-19-43-32-UTC.txt
(+30 files in other folders)
